# Platypus

./: README.md  build_all.sh  dso_callbacks.cpp  dso_callbacks.h
Evaluation/: README.md
Evaluation/bftpd/: README.md  bftpd.conf  bftpd.py
Evaluation/lighttpd/: README.md  lighttpd.conf  lighttpd.py
Evaluation/memcached/: README.md  memcached.py
Evaluation/nginx/: README.md  nginx.conf  set.sh
Evaluation/redis/: README.md  redis.py
Evaluation/sqlite/: README.md  sqlite.py
binaries/bftpd/: a.txt  compile.sh
binaries/lighttpd/: compile.sh
binaries/memcached/: a.txt  compile.sh
binaries/nginx/: a.txt  compile.sh  makefile
binaries/redis/: a.txt  compile.sh
binaries/sqlite/: a.txt  compile.sh
glibc-platypus/: BitMasks.cpp  Makerules  README.md  clang-wrapper-uninstrumented.sh  clang-wrapper.sh  dso_callbacks.cpp  libc_build.sh  masks.h  masks_ld.h
glibc-platypus/argp/: argp-help.c
glibc-platypus/assert/: test-assert-2.c
glibc-platypus/benchtests/: bench-arc4random.c  bench-math-inlines.c  bench-pthread-locks.c
glibc-platypus/bits/: stdlib-bsearch.h
glibc-platypus/csu/: libc-start.c
glibc-platypus/dirent/: scandir-tail-common.c  scandir64.c  scandirat64.c
glibc-platypus/dlfcn/: defaultmod1.c  defaultmod2.c  dlerror.c
glibc-platypus/elf/: Makefile  dl-catch.c  dl-iteratephdr.c  dl-libc.c  dl-load.c  dl-load.h  dl-lookup.c  dl-map-segments.h  dl-reloc.c  dl-runtime.h  dl-sym.c  dl-tunables.c  elf.h  link.h  placeholder-arr.c  rtld.c  tst-dl-hash.c  tst-dl_find_object-mod1.c  tst-dl_find_object-mod2.c  tst-dl_find_object-mod3.c  tst-dl_find_object-mod4.c  tst-dl_find_object-mod5.c  tst-dl_find_object-mod6.c  tst-dl_find_object-mod7.c  tst-dl_find_object-mod8.c  tst-dl_find_object-mod9.c  tst-execstack-mod.c  tst-execstack-needed.c  tst-execstack-prog.c
glibc-platypus/htl/: pt-create.c
glibc-platypus/hurd/: catch-signal.c  ctty-input.c  ctty-output.c  hurdinit.c  hurdlookup.c  hurdprio.c  hurdsig.c  hurdstartup.c  lookup-retry.c  path-lookup.c
glibc-platypus/include/: csumasks.h  libc-internal.h  link.h
glibc-platypus/io/: fts.c  ftw.c  tst-lchmod.c  tst-statx.c
glibc-platypus/libio/: libioP.h  tst-vtables-common.c
glibc-platypus/malloc/: mcheck-impl.c  mcheck.c  obstack.c  tst-dynarray-at-fail.c  tst-malloc-fork-deadlock.c  tst-safe-linking.c
glibc-platypus/math/: test-fenv.c
glibc-platypus/misc/: allocate_once.c  lsearch.c  search.h  tsearch.c  tst-efgcvt-template.c  tst-syslog.c  tst-tsearch.c
glibc-platypus/nis/: nis_callback.c  nis_file.c  nis_table.c
glibc-platypus/nptl/: cleanup_compat.c  pthread_create.c  pthread_key_create.c  pthread_once.c  tst-cleanup4.c  tst-cleanup4aux.c  tst-pthread-timedlock-lockloop.c  tst-sem13.c  tst-setuid2.c
glibc-platypus/nptl_db/: td_ta_thr_iter.c  td_ta_tsd_iter.c
glibc-platypus/nscd/: selinux.c
glibc-platypus/nss/: getnssent.c  getnssent_r.c  nss_module.c  nss_test_errno.c  nss_test_gai_hv2_canonname.c
glibc-platypus/posix/: glob.c  register-atfork.c  tst-glob_lstat_compat.c  tst-posix_spawn-fd.c
glibc-platypus/resolv/: gai_misc.c  tst-res_hnok.c  tst-resolv-qtypes.c
glibc-platypus/rt/: aio_misc.c
glibc-platypus/signal/: signal.c  sigset.c  (+1 more)
libraries/: README.md
llvm-passes/: README.md
llvm-passes/FindDynSym/: CMakeLists.txt  FindDynSym.cpp  Helper_Functions.cpp  Helper_Functions.h
llvm-passes/LogStructs/: CMakeLists.txt  Helper_Functions.cpp  Helper_Functions.h  LogStructs.cpp  exported_structs.py
llvm-platypus/: README.md  compiler.sh  compiler_uninstrumented.sh
scripts/: README.md  annotate.sh  annotation.py  callback_parser.py  create_header.py  create_tables.py  parse_output.py  parse_structs.py  plt_addr.py
(+169 files in other folders)
